<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jiaqi.filesmanagement.MainLogin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/username"
                android:ems="10"
                android:maxLength="10"
                android:id="@+id/username"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pw"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pwname"
                android:ems="10"
                android:id="@+id/pwname"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up"
                style="@style/Button_style"
                android:layout_weight="1"
                />


            <Button
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in"
                style="@style/Button_style"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
