<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_0"
    android:paddingLeft="@dimen/activity_0"
    android:paddingRight="@dimen/activity_0"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back2"
    tools:context="com.example.jiaqi.filesmanagement.SignUp">

    <Button
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Flogout"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/username"
            android:textColorHint="@color/text_white"
            android:textColor="@color/text_white"
            android:ems="10"
            android:maxLength="6"
            android:id="@+id/editText1"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signup_pw1"
            android:textColorHint="@color/text_white"
            android:textColor="@color/text_white"
            android:ems="10"
            android:id="@+id/editText2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signup_pw2"
            android:textColorHint="@color/text_white"
            android:textColor="@color/text_white"
            android:ems="10"
            android:id="@+id/editText3" />

    </LinearLayout>


</RelativeLayout>
